Make requested changes + bump Hephaistos version